# tiny386

./: .gitignore  .gitmodules  CPU_EMULATOR_ASSESSMENT.md  Makefile  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PLAN.md  README.md  T_DECK_ADAPTATION.md  T_DECK_CODE_LOCATIONS.md  T_DECK_IMPLEMENTATION_NOTES.md  T_DECK_SUMMARY.md  adlib.c  cpu_dispatch.c  cpu_dispatch.h  fmopl.c  fmopl.h  fpu.c  fpu_build_fast.c  fpu_build_full.c  gus.c  gus.h  i386.c  i386.h  i386_build_fast.c  i386_build_full.c  i386_fast.c  i386ins.def  i8042.c  i8042.h  i8254.c  i8254.h  i8257.c  i8259.c  i8259.h  ide.c  ide.h  ini.h  main.c  (+12 more)
conf/: gray386.ini  jslinux.ini  win98.ini  winxp.ini
docs/: ESP32-P4-REVIEW.md
el133uf1-pico/: .gitignore  README.md  platformio.ini
el133uf1-pico/lib/DS3231/: AT24C32.cpp  AT24C32.h  DS3231.cpp  DS3231.h  library.json
el133uf1-pico/lib/EL133UF1/: EL133UF1.cpp  EL133UF1.h  EL133UF1_BMP.cpp  EL133UF1_BMP.h  EL133UF1_TTF.cpp  EL133UF1_TTF.h  library.json
el133uf1-pico/lib/EL133UF1/fonts/: README.md  opensans.h
el133uf1-pico/lib/pico_sleep/: library.json  pico_sleep.cpp  pico_sleep.h
el133uf1-pico/src/: main.cpp
esp/: CMakeLists.txt  Makefile  badge-bsp.patch  esp-idf.patch  sdkconfig_tanmatsu  tiny386.ini  tiny386.ini.tanmatsu
esp/components/badgeteam__badge-bsp/: .component_hash  CHECKSUMS.json  idf_component.yml
esp/components/badgeteam__badge-bsp/stub/: badge_bsp_device.c
esp/main/: CMakeLists.txt  board_tanmatsu.h  common.h  esp_main.c  file_browser.c  file_browser.h  i2s.c  idf_component.yml  ini_selector.c  ini_selector.h  input_bsp.c  lcd_bsp.c  led_activity.c  led_activity.h  mouse_emu.c  mouse_emu.h  planar_bs.bsasm  st7789_panel.c  st7789_panel.h  storage.c  tanmatsu_osd.c  tanmatsu_osd.h  tdeck_hw.h  tdeck_keyboard.c  tdeck_keyboard.h  tdeck_trackball.c  tdeck_trackball.h  toast.c  toast.h  usb_host.c  usb_host.h  vga_font_8x16.h  vga_pie.S  wifi.c
esp/sdkconfigs/: general  jc3248w535  jc4880p433  tanmatsu
osd/: osd.c
scripts/: build_seabios.sh
seabios/: patch
tools/: DIAG386.ASM  DIAG386.COM
